fix spacing between graphs.

--- a/src/pages/Controllers/ControllerOverview/_controller-overview.scss
+++ b/src/pages/Controllers/ControllerOverview/_controller-overview.scss
@@ -7,12 +7,11 @@
 .controllers-overview {
   width: 100%;
 
-  &__container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  &__chart {
+    margin-right: 2rem;
+  }
 
-    @media (min-width: $breakpoint-x-small) {
-      grid-template-columns: repeat(3, 1fr);
-    }
+  &__container {
+    display: flex;
   }
 }
